<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneySplit</string>
    <string name="action_settings">Settings</string>

    <string name="bill_text_view">Bill</string>

    <string name="tip_text_view">Tip</string>
    <!-- <string name="tip_edit_text">0.15</string> -->
    <string name="tip_dropdown">Tip Granularity</string>
    <string-array name="tip_arrays">
        <item>0.15</item>
        <item>0.20</item>
        <item>0.25</item>
        <item>0.30</item>
        <item>0.35</item>
    </string-array>

    <string name="final_text_view">Final Bill</string>

    <string name="count_people">People</string>
    <!-- <string name="count_people_edit_view">1</string> -->
    <string name="count_people_dropdown">Number of Person</string>
    <string-array name="count_people_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="per_person">Per Person</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
