<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:longClickable="false">


    <TextView
        android:id="@+id/billTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text_view"
        android:textSize="37dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="14"
        android:textSize="18dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_alignTop="@+id/billTextView"
        android:layout_toRightOf="@+id/finalBillTextView"
        android:layout_toEndOf="@+id/finalBillTextView" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:layout_marginTop="32dp"
        android:textSize="37dp"
        android:layout_below="@+id/billTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <TextView
        android:id="@+id/finalBillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text_view"
        android:textSize="37dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/tipTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/finalBillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:textSize="18dp"
        android:inputType="numberDecimal"
        android:focusable="false"
        android:layout_above="@+id/countPeopleTextView"
        android:layout_alignLeft="@+id/billEditText"
        android:layout_alignStart="@+id/billEditText" />

    <TextView
        android:id="@+id/countPeopleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_people"
        android:textSize="34dp"
        android:layout_below="@+id/finalBillTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_toLeftOf="@+id/finalBillEditText"
        android:layout_toStartOf="@+id/finalBillEditText" />




    <TextView
        android:id="@+id/perPersonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/per_person"
        android:textSize="34dp"
        android:layout_marginTop="35dp"
        android:layout_below="@id/countPeopleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/countPeopleTextView"
        android:layout_alignEnd="@+id/countPeopleTextView" />

    <EditText
        android:id="@+id/perPersonEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:numeric="decimal"
        android:textSize="18dp"
        android:focusable="false"
        android:layout_alignBottom="@+id/perPersonTextView"
        android:layout_toRightOf="@+id/countPeopleTextView"
        android:layout_toEndOf="@+id/countPeopleTextView" />

    <Spinner
        android:id="@+id/tipSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/tip_dropdown"
        android:entries="@array/tip_arrays"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/tipTextView"
        android:layout_alignLeft="@+id/finalBillEditText"
        android:layout_alignStart="@+id/finalBillEditText" />

    <Spinner
        android:id="@+id/countPeopleSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/count_people_dropdown"
        android:entries="@array/count_people_arrays"
        android:layout_alignTop="@+id/countPeopleTextView"
        android:layout_alignLeft="@+id/perPersonEditText"
        android:layout_alignStart="@+id/perPersonEditText"
        android:dropDownWidth="wrap_content"
        android:spinnerMode="dropdown"
        style="@style/Base.TextAppearance.AppCompat.Widget.PopupMenu.Large" />


</RelativeLayout>
